# tanu-allure

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  tanu.toml
.github/patches/: tanu-integration-allure.patch
.github/workflows/: publish-report.yml  release.yaml  test.yml
example/: Cargo.toml  Dockerfile  README.md
example/src/: main.rs
src/: adapter.rs  lib.rs  models.rs
src/tests/: mod.rs
