[package]
name = "tanu-allure"
version = "0.1.0"
edition = "2021"
description = "Allure integration for Tanu"
homepage = "https://github.com/tanu-rs/tanu-allure"
repository = "https://github.com/tanu-rs/tanu-allure"
license = "Apache-2.0"
keywords = ["webapi", "test", "http"]
categories = ["development-tools"]

[dependencies]
async-trait = "0.1.0"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2.1"
tanu-core = "0.7.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
