[workspace]
members = ["example"]
resolver = "2"

[package]
name = "tanu-allure"
version = "0.8.0"
edition = "2021"
description = "Allure integration for Tanu"
homepage = "https://github.com/tanu-rs/tanu-allure"
repository = "https://github.com/tanu-rs/tanu-allure"
license = "Apache-2.0"
keywords = ["webapi", "test", "http"]
categories = ["development-tools"]

[dependencies]
async-trait = "0.1.0"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2.1"
tanu-core = { version = ">=0.20.1", default-features = false, features = ["grpc", "json"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
sha2 = "0.10"
hostname = "0.4"

[features]
default = ["native-tls"]
native-tls = ["tanu-core/native-tls"]
rustls-tls = ["tanu-core/rustls-tls"]
rustls-tls-webpki-roots = ["tanu-core/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["tanu-core/rustls-tls-native-roots"]
